--- a/Lab4/Source/AseLab4/MyApp/app/src/main/res/layout/content_main.xml
+++ b/Lab4/Source/AseLab4/MyApp/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
     android:gravity="center"
     android:orientation="vertical"
     android:weightSum="1"
-    android:background="@drawable/bg"
+    android:background="@drawable/"
     android:layout_alignParentTop="true"
     android:layout_alignParentStart="true"
     android:layout_marginTop="0dp">
