--- a/Lab7/Source/myIonicApp/www/templates/home.html
+++ b/Lab7/Source/myIonicApp/www/templates/home.html
@@ -1,28 +1,273 @@
-<ion-view title="Ionic Mashup Application" id="homePage" style="background: url(img/bg7.jpg) no-repeat center;background-size:cover;"  >
-    <ion-content padding="true" class="has-header" ng-controller="homeCtrl">
+<ion-view title="IonicApp" id="homePage" >
+   
+
+         <ion-content padding="true" style="background: url(img/bg7.jpg) no-repeat center;background-size:cover;" class="has-header" ng-controller="homeCtrl">
         <form id="searchForm" class="list">
-             <div id="searchApp-bar3" class="button-bar">
-             <label class="item item-input" >
-                <i class="icon ion-search placeholder-icon"></i>
-                <input ng-model="data.location" type="text" placeholder="Enter location to search events nearby" name="txtLocation" style="width: 400px; height: 20px;border-radius:38px 38px 38px 38px;">
-             </label>              
-              <div class="spacer" style="width: 36px; height: 36px;"></div>
-                                      
-                <input type="type" placeholder="Start Date" ng-click="showCalender">       
-                 <div class="spacer" style="width: 36px; height: 36px;"></div>           
-                <input type="type" placeholder="End Date">   
-              <div class="spacer" style="width: 36px; height: 36px;" ng-click="showCalender()" ></div>   
            
-             </div> 
-             <div class="spacer" style="width: 36px; height: 36px;"></div>   
-             <button id="searchApp-button11"  ng-click="search()" style="border-radius:38px 38px 38px 38px;" class="button button-dark  button-block">Start Recording >></button>
-           
-            <img src="img/bg2.jpg" style="width : 5% ; height : 5% ;" ng-click="nextpage()" >
-          </form>
-        <div class="spacer" style="width: 300px; height: 18px;"></div>        
-        <div id="map" data-tap-disabled="true"></div>
-        <div id="show-list">
-           
+        <h1 align="center" style="color: #120e10">Mashup Application</h1>
+
+<head>
+    IonicApp
+</head>
+<head>
+    <title>Mashup Application</title>
+    <link href="https://plus.google.com/100585555255542998765" rel="publisher">
+    <link href="//www.google.com/images/icons/product/chrome-32.png" rel="icon" type="image/ico">
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel=
+            "stylesheet">
+<style>
+    body{
+        background:url('Background-4.jpg');
+        background-size:cover;
+    }
+</style>
+    <script src="//www.google.com/js/gweb/analytics/autotrack.js">
+    </script>
+    <script>
+        new gweb.analytics.AutoTrack({
+            profile: 'UA-26908291-1'
+        });
+
+    </script>
+    <link rel="stylesheet" type="text/css" href="homeCss.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.min.js"></script>
+    <script src="sentiment.js"></script>
+</head>
+<body style="background: url('Background-4.jpg')" class="bgg" ng-app="Sentiment">
+<div class="browser-landing" id="main">
+    <div id="top">
+        <h1 align="center" style="color: rgba(25,29,31,0.95)">Mashup Application</h1>
+    </div>
+
+    <div id="main-top">
+
+        <div class="myedit">
+            <div class="compact marquee">
+                <div id="info">
+                    <p id="info_start" style="font-size: 20px;color: red">
+                        Click on button to record Speech.
+                    </p>
+                    <p id="info_speak_now" style="display:none;font-size: 20px;color: blue">
+                        Speak now.
+                    </p>
+                    <p id="info_no_speech" style="display:none;font-size: 20px;color: blue">
+                        No speech was detected. You may need to adjust your microphone.
+                    </p>
+                    <p id="info_no_microphone" style="display:none;font-size: 20px;color: blue">
+                        No microphone was found. Ensure that a microphone is installed and that microphone settings are configured correctly.
+                    </p>
+                    <p id="info_allow" style="display:none;font-size: 20px;color: blue">
+                        Click the "Allow" button above to enable your microphone.
+                    </p>
+                    <p id="info_denied" style="display:none;font-size: 20px;color: blue">
+                        Permission to use microphone was denied.
+                    </p>
+                    <p id="info_blocked" style="display:none;font-size: 20px;color: blue">
+                        Permission to use microphone is blocked. To change, go to
+                        chrome://settings/contentExceptions#media-stream
+                    </p>
+                    <p id="info_upgrade" style="display:none;font-size: 20px;color: blue">
+                        Web Speech API is not supported by this browser. Upgrade to <a href="//www.google.com/chrome">Chrome</a> version 25 or later.
+                    </p>
+                </div>
+                <div id="div_start">
+                    <button id="start_button" onclick="startButton(event)"><img alt="Start" id="start_img" src="microphone.jpg"></button>
+                </div>
+                <div id="results">
+                    <span class="final" id="final_span"></span> <span class="interim" id=
+                        "interim_span"></span>
+                </div>
+            </div>
         </div>
+    </div>
+</div>
+</div><script src="/intl/en/chrome/assets/common/js/chrome.min.js">
+</script> <script>
+    var chrmMenuBar = new chrm.ui.MenuBar();
+    chrmMenuBar.decorate('nav');
+    var chrmLogo = new chrm.ui.Logo('logo');
+    var chrmscroll = new chrm.ui.SmoothScroll('scroll');
+    chrmscroll.init();
+    window.___gcfg = { lang: 'en' };
+    (function() {
+        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+        po.src = 'https://apis.google.com/js/plusone.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+    })();
+    var doubleTracker = new gweb.analytics.DoubleTrack('floodlight', {
+        src: 2542116,
+        type: 'clien612',
+        cat: 'chrom0'
+    });
+    doubleTracker.track();
+    doubleTracker.trackClass('doubletrack', true);
+</script> <script>
+    var create_email = false;
+    var final_transcript = '';
+    var recognizing = false;
+    var ignore_onend;
+    var start_timestamp;
+    if (!('webkitSpeechRecognition' in window)) {
+        upgrade();
+    } else {
+        start_button.style.display = 'inline-block';
+        var recognition = new webkitSpeechRecognition();
+        recognition.continuous = true;
+        recognition.interimResults = true;
+        recognition.onstart = function() {
+            recognizing = true;
+            showInfo('info_speak_now');
+            start_img.src = 'microphone.jpg';
+        };
+        recognition.onerror = function(event) {
+            if (event.error == 'no-speech') {
+                start_img.src = 'microphone.jpg';
+                showInfo('info_no_speech');
+                ignore_onend = true;
+            }
+            if (event.error == 'audio-capture') {
+                start_img.src = 'microphone.jpg';
+                showInfo('info_no_microphone');
+                ignore_onend = true;
+            }
+            if (event.error == 'not-allowed') {
+                if (event.timeStamp - start_timestamp < 100) {
+                    showInfo('info_blocked');
+                } else {
+                    showInfo('info_denied');
+                }
+                ignore_onend = true;
+            }
+        };
+        recognition.onend = function() {
+            recognizing = false;
+            if (ignore_onend) {
+                return;
+            }
+            start_img.src = 'microphone.jpg';
+            if (!final_transcript) {
+                showInfo('info_start');
+                return;
+            }
+            showInfo('');
+            if (window.getSelection) {
+                window.getSelection().removeAllRanges();
+                var range = document.createRange();
+                range.selectNode(document.getElementById('final_span'));
+                window.getSelection().addRange(range);
+            }
+            if (create_email) {
+                create_email = false;
+                createEmail();
+            }
+        };
+        recognition.onresult = function(event) {
+            var interim_transcript = '';
+            if (typeof(event.results) == 'undefined') {
+                recognition.onend = null;
+                recognition.stop();
+                upgrade();
+                return;
+            }
+            for (var i = event.resultIndex; i < event.results.length; ++i) {
+                if (event.results[i].isFinal) {
+                    final_transcript += event.results[i][0].transcript;
+                } else {
+                    interim_transcript += event.results[i][0].transcript;
+                }
+            }
+            final_transcript = capitalize(final_transcript);
+            final_span.innerHTML = linebreak(final_transcript);
+            interim_span.innerHTML = linebreak(interim_transcript);
+            if (final_transcript || interim_transcript) {
+                showButtons('inline-block');
+            }
+        };
+    }
+    function copyButton() {
+        if (recognizing) {
+            recognizing = false;
+            recognition.stop();
+        }
+        copy_button.style.display = 'none';
+        copy_info.style.display = 'inline-block';
+        showInfo('');
+    }
+    function upgrade() {
+        start_button.style.visibility = 'hidden';
+        showInfo('info_upgrade');
+    }
+    var two_line = /\n\n/g;
+    var one_line = /\n/g;
+    function linebreak(s) {
+        return s.replace(two_line, '<p></p>').replace(one_line, '<br>');
+    }
+    var first_char = /\S/;
+    function capitalize(s) {
+        return s.replace(first_char, function(m) { return m.toUpperCase(); });
+    }
+    function startButton(event) {
+        if (recognizing) {
+            recognition.stop();
+            return;
+        }
+        final_transcript = '';
+        recognition.lang = "english";
+        recognition.start();
+        ignore_onend = false;
+        final_span.innerHTML = '';
+        interim_span.innerHTML = '';
+        start_img.src = 'microphone.jpg';
+        showInfo('info_allow');
+        showButtons('none');
+        start_timestamp = event.timeStamp;
+    }
+    function showInfo(s) {
+        if (s) {
+            for (var child = info.firstChild; child; child = child.nextSibling) {
+                if (child.style) {
+                    child.style.display = child.id == s ? 'inline' : 'none';
+                }
+            }
+            info.style.visibility = 'visible';
+        } else {
+            info.style.visibility = 'hidden';
+        }
+    }
+    var current_style;
+    function showButtons(style) {
+        if (style == current_style) {
+            return;
+        }
+        current_style = style;
+        copy_button.style.display = style;
+        email_button.style.display = style;
+        copy_info.style.display = 'none';
+        email_info.style.display = 'none';
+    }
+</script>
+
+<div ng-controller="Sentimentctrl" id="sentiment">
+    <div id="sentiment-button">
+        <button class="btn btn-primary" ng-click="findSentiment()">Click here for Sentiment Analysis</button>
+    </div>
+    <div id="div_List" style="display:none;font-size: 20px;>
+        <div class="table1">
+    <p ng-model="Sentimentwithlang">
+    <TABLE class="tb1" BORDER=1 CELLPADDING=2 style="width:100%">
+        <TR> <TH style="color: #ff3416; background:white" COLSPAN=2>Sentiment Analysis Using Alchemy API </TH> </TR>
+        <TR style="font-size:medium"> <TD>Sentiment of the text</TD> <TD>{{Sentimentwithlang.sentiment}}</TD> </TR>
+        <TR style="font-size:medium"> <TD>Sentiment Score of the text</TD> <TD>{{Sentimentwithlang.score}}</TD> </TR>
+        <TR style="font-size:medium"> <TD>Language of the text</TD> <TD>{{Sentimentwithlang.language}}</TD> </TR>
+        <!--<TR> <TH style="color: aliceblue; background:lightyellow" COLSPAN=2 BGCOLOR="">{{reviewText}}</TH> </TR>-->
+    </TABLE>
+    </p>
+</div>
+</div>
+</div>
+</body>
+</html>
+
+      
     </ion-content>
 </ion-view>
