--- a/Lab10/Source/MongoRestApplication/scss/style1.scss
+++ b/Lab10/Source/MongoRestApplication/scss/style1.scss
@@ -8,16 +8,16 @@
 }
 body{background:#FF9000;}
 h1{
-  color:#ccc;
+  color: #cc3481;
   text-align:center;
-  font-family: 'Vibur', cursive;
+
   font-size: 50px;
 }
 
 .login-form{
   width:350px;
   padding:40px 30px;
-  background:#eee;
+
   @include border-radius(4px);
   margin:auto;
   position: absolute;
@@ -36,7 +36,7 @@ h1{
   border:none;
   padding:5px 7px 5px 15px;
   background:#fff;
-  color:#666;
+
   border:2px solid #ddd;
   @include border-radius(4px);
     &:focus, &:focus + .fa{
@@ -48,7 +48,7 @@ h1{
   position: absolute;
   right:15px;
   top:17px;
-  color:#999;
+
 }
 .log-status.wrong-entry {
  @include animation( wrong-log 0.3s);
@@ -63,7 +63,7 @@ h1{
   width:100%;
   font-size:16px;
   height:50px;
-  color:#fff;
+  color: #ff2449;
   text-decoration:none;
   border:none;
   @include border-radius(4px);
